--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/taluoo/node-clone-url/issues"
   },
-  "homepage": "https://github.com/taluoo/node-clone-url#readme"
+  "homepage": "https://github.com/taluoo/node-clone-url#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.1.1"
+  }
 }
