--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.1.1"
+  },
+  "dependencies": {
+    "@taluoo/download": "^1.0.3",
+    "@taluoo/md5": "^1.0.1",
+    "@taluoo/tmpfile": "^1.0.1",
+    "mkdirp": "^0.5.1"
   }
 }
